After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 680388 - matroskademux: crash in _subtitle_chunk_has_tag() while trying to discover mkv file
matroskademux: crash in _subtitle_chunk_has_tag() while trying to discover mk...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
0.11.x
Other Linux
: Normal normal
: 0.11.x
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-07-21 21:24 UTC by Jens Georg
Modified: 2012-07-24 10:39 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Sample file (976.00 KB, video/x-matroska)
2012-07-23 16:18 UTC, Jens Georg
Details

Description Jens Georg 2012-07-21 21:24:45 UTC
(gdb) bt
  • #0 __strchr_sse42
    at ../sysdeps/x86_64/multiarch/strchr.S line 135
  • #1 gst_matroska_demux_subtitle_chunk_has_tag
    at matroska-demux.c line 2967
  • #2 gst_matroska_demux_check_subtitle_buffer
    at matroska-demux.c line 3063
  • #3 gst_matroska_demux_parse_blockgroup_or_simpleblock
    at matroska-demux.c line 3707
  • #4 gst_matroska_demux_parse_id
    at matroska-demux.c line 4353
  • #5 gst_matroska_demux_loop
    at matroska-demux.c line 4522
  • #6 gst_task_func
    at gsttask.c line 316
  • #7 g_thread_pool_thread_proxy
    at gthreadpool.c line 309
  • #8 g_thread_proxy
    at gthread.c line 801
  • #9 start_thread
    at pthread_create.c line 308
  • #10 clone
    at ../sysdeps/unix/sysv/linux/x86_64/clone.S line 112
  • #11 ??

Comment 1 Tim-Philipp Müller 2012-07-23 09:39:28 UTC
Could you make the file available?

If it crashes more or less at the start, perhaps head --bytes=1M foo.mkv > head.mkv will do as well to reproduce it.
Comment 2 Jens Georg 2012-07-23 16:18:57 UTC
Created attachment 219508 [details]
Sample file

First ~1mb of file, gst-discoverer-1.0 crashes still with the same bt
Comment 3 Jens Georg 2012-07-23 16:19:39 UTC
Works fine on files without subtitle, so I suspect that's the culprit.
Comment 4 Tim-Philipp Müller 2012-07-23 16:29:16 UTC
Thanks!
Comment 5 Mark Nauwelaerts 2012-07-24 10:39:24 UTC
commit 7e9dffa2266bb9c32a778335745cafc41e205d44
Author: Mark Nauwelaerts <mark.nauwelaerts@collabora.co.uk>
Date:   Tue Jul 24 12:33:33 2012 +0200

    matroskademux: avoid NULL access when checking subtitle
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680388