matroskademux: avoid NULL access when checking subtitle

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=680388